--- a/mysql-woocommerce-ci/Dockerfile
+++ b/mysql-woocommerce-ci/Dockerfile
@@ -2,7 +2,7 @@ FROM mariadb
 MAINTAINER Vindi<comunidade@vindi.com.br>
 
 ENV MYSQL_USER root
-ENV MYSQL_DATABASE wordpress
 ENV MYSQL_ROOT_PASSWORD 123
 
 ADD ./wordpress.sql /docker-entrypoint-initdb.d
+ADD ./wp_test.sql /docker-entrypoint-initdb.d
