--- a/apache-woocommerce-ci/Dockerfile
+++ b/apache-woocommerce-ci/Dockerfile
@@ -1,11 +1,22 @@
 FROM php:7.0-apache
 MAINTAINER Vindi<comunidade@vindi.com.br>
 
-# Install GD
+# Variable
+ENV COMPOSER_ALLOW_SUPERUSER 1
+
+# Additional PHP ini configuration
+COPY ./wordpress.tar.gz /var/www/html/
+COPY ./php.ini /usr/local/etc/php/conf.d/
+COPY ./docker-entrypoint.sh /usr/local/bin/
+
+## Install GD
 RUN apt-get update
 RUN apt-get install -y apt-utils libfreetype6-dev libjpeg62-turbo-dev
 RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/
 RUN docker-php-ext-install gd
+
+# Install wget
+RUN apt-get install -y wget
 
 # Install MCrypt
 RUN apt-get install -y libmcrypt-dev
@@ -18,15 +29,6 @@ RUN docker-php-ext-install intl
 # Install Mysql
 RUN docker-php-ext-install mysqli pdo_mysql
 
-# Install Composer
-RUN curl -sS https://getcomposer.org/installer | php
-RUN mv composer.phar /usr/local/bin/composer
-
-# Install wp-cli
-RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
-RUN chmod +x wp-cli.phar
-RUN mv wp-cli.phar /usr/local/bin/wp
-
 # Install mbstring
 RUN docker-php-ext-install mbstring
 
@@ -38,7 +40,8 @@ RUN docker-php-ext-install soap
 RUN docker-php-ext-install opcache
 
 # Install PHP zip extension
-RUN apt-get install -y zip unzip
+RUN apt-get install -y zip
+RUN apt-get install -y unzip
 RUN docker-php-ext-install zip
 
 # Install Git
@@ -48,21 +51,26 @@ RUN apt-get install -y git
 RUN apt-get install -y libxslt-dev
 RUN docker-php-ext-install xsl
 
-# Install wget
-RUN apt-get install -y wget
+# Install MySQL CLI Client
+RUN apt-get install -y mysql-client
+
+# Configure PHP date.timezone
+RUN echo "date.timezone = America/Sao_Paulo" > /usr/local/etc/php/conf.d/timezone.ini
+
+# Install Composer
+RUN curl -sS https://getcomposer.org/installer | php
+RUN mv composer.phar /usr/local/bin/composer
+
+# Install wp-cli
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+RUN chmod +x wp-cli.phar
+RUN mv wp-cli.phar /usr/local/bin/wp
 
 # Install codeception
-RUN wget https://codeception.com/codecept.phar
+RUN curl -O https://codeception.com/codecept.phar
 RUN chmod +x codecept.phar
 RUN mv codecept.phar /usr/local/bin/codecept
 
-# Additional PHP ini configuration
-COPY ./php.ini /usr/local/etc/php/conf.d/
-COPY ./wordpress.tar.gz /var/www/html/
-COPY ./docker-entrypoint.sh /usr/local/bin/
-COPY ./wait-for-it.sh /wait-for-it.sh
-
-RUN chmod +x /wait-for-it.sh
 
 # Create certificate
 RUN openssl req \
@@ -125,26 +133,10 @@ RUN { \
 
 RUN a2enconf "document-root-directory.conf"
 
-
-# Install MySQL CLI Client
-RUN apt-get install -y mysql-client
-
-# Configure PHP date.timezone
-RUN echo "date.timezone = America/Sao_Paulo" > /usr/local/etc/php/conf.d/timezone.ini
-
-
-ENV WORDPRESS_VERSION 4.9.8
-ENV WORDPRESS_DB_HOST wordpress_db
-ENV WORDPRESS_DB_USER root
-ENV WORDPRESS_DB_PASSWORD 123
-ENV WORDPRESS_DB_NAME wordpress
-ENV WORDPRESS_DEBUG 1
-ENV COMPOSER_ALLOW_SUPERUSER 1
-
-
 RUN set -ex
 RUN tar xf wordpress.tar.gz
 RUN rm wordpress.tar.gz
+
 RUN { \
         echo "<IfModule mod_rewrite.c>"; \
         echo "	RewriteEngine On"; \
@@ -155,18 +147,16 @@ RUN { \
         echo "	RewriteRule . /index.php [L]"; \
         echo "</IfModule>"; \
     } > /var/www/html/.htaccess
+
+WORKDIR /var/www/html/wp-content/plugins
+RUN wget https://github.com/vindi/vindi-woocommerce-subscriptions/archive/develop.tar.gz
+RUN mkdir vindi-woocommerce-subscriptions && tar xf develop.tar.gz -C vindi-woocommerce-subscriptions --strip-components 1
+RUN rm develop.tar.gz
+WORKDIR /var/www/html/wp-content/plugins/vindi-woocommerce-subscriptions
+RUN composer install
 RUN	chown -R www-data:www-data /var/www/html
 
 
-RUN set -e
-RUN cd /var/www/html/wp-content/plugins
-RUN git clone -b develop https://github.com/vindi/vindi-woocommerce-subscriptions.git
-
-WORKDIR /var/www/html/wp-content/plugins/vindi-woocommerce-subscriptions
-
-RUN composer install
-
 EXPOSE 443
 
-ENTRYPOINT ["docker-entrypoint.sh"]
 CMD ["apache2-foreground"]
