--- a/apache-woocommerce-ci/docker-compose.yml
+++ b/apache-woocommerce-ci/docker-compose.yml
@@ -4,21 +4,22 @@ services:
     image: selenium/standalone-chrome-debug
     container_name: selenium
     ports:
+    - "4444"
     - "5900:5900"
-  wordpressdb:
+  db:
     image: vindi/mysql-woocommerce-ci
     container_name: wordpress_db
     ports:
     - "3306"
-  wordpressweb:
+  web:
     image: vindi/apache-woocommerce-ci
     container_name: vindi.local
     depends_on:
-    - wordpressdb
+    - db
     ports:
     - "443:443"
     links:
-    - wordpressdb:mysql
+    - db:mysql
 networks:
   default:
     external:
